--- a/django_project/requirements.txt
+++ b/django_project/requirements.txt
@@ -6,5 +6,5 @@ Pillow==10.2.0  # Nếu có xử lý hình ảnh
 whitenoise==6.6.0  # Hỗ trợ phục vụ tĩnh
 gunicorn==21.2.0
 django-cors-headers==4.3.1
-djoser
+djoser==2.3.1
 
