--- a/docker/nginx/Dockerfile
+++ b/docker/nginx/Dockerfile
@@ -1,3 +1,3 @@
 FROM nginx:alpine
 COPY ./docker/nginx/default.conf /etc/nginx/conf.d/default.conf
-COPY ../../django_project/staticfiles /app/staticfiles
+COPY ./django_project/staticfiles /app/staticfiles
