--- a/my_app/pubspec.yaml
+++ b/my_app/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   http: ^1.1.0
   shared_preferences: ^2.2.2
+  provider: ^6.1.1
 
 
   # The following adds the Cupertino Icons font to your application.
